<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtValue"
        android:layout_margin="30dp"
        android:background="#00000000"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/btnPercentage"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_200"
            android:text="@string/percentage"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCE"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_200"
            android:text="@string/ce"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnErase"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="18dp"
            android:backgroundTint="@color/gray_200"
            android:src="@drawable/erase_24" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_200"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_200"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_200"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_200"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/btnChangeSign"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/changeSign"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray_300"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnResult"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/primary"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>